--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-build/
-bin/
+./build/
+./bin/
+
+*.exe
 
 CMakeLists.txt.user
 CMakeCache.txt
@@ -12,4 +14,3 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-*.exe
